--- a/DENNIS_KIMANTHI_PROJECT.ipynb
+++ b/DENNIS_KIMANTHI_PROJECT.ipynb
@@ -23,7 +23,7 @@
         "* Student pace: self paced / part time / full time: Part time\n",
         "* Scheduled project review date/time:28th July 2024\n",
         "* Instructor name:Samwel Jane\n",
-        "* Blog post URL:\n"
+        "* Blog post URL:https://github.com/denniskimanthi/git_practice/blob/master/DENNIS_KIMANTHI_PROJECT.ipynb\n"
       ]
     },
     {
@@ -32,7 +32,7 @@
         "id": "sOkkMiJm1FRI"
       },
       "source": [
-        "# **PREVIEW OF TOP UPCOMING MOVIES FROM MICROSOFT**"
+        "# **PREVIEW OF MICROSOFT'S NEW FILM STUDIO**"
       ]
     },
     {
@@ -41,7 +41,7 @@
         "id": "6ZPCbs_LtYFj"
       },
       "source": [
-        "**Business Problem**\n",
+        "# **Business Problem**\n",
         "\n",
         "Microsoft sees all the big companies creating original video content and they want to get in on the fun. They have decided to create a new movie studio, but they don’t know anything about creating movies. You are charged with exploring what types of films are currently doing the best at the box office. You must then translate those findings into actionable insights that the head of Microsoft's new movie studio can use to help decide what type of films to create."
       ]
@@ -52,7 +52,7 @@
         "id": "iGZFnKYtthxB"
       },
       "source": [
-        "**Project Overview**\n",
+        "# **Project Overview**\n",
         "\n",
         "Microsoft wishes to venture into original video content production so as to diversify its portfolio.For this to happen Microsoft needs to understand the dynamics of the movie industry, and the films that are currently doing well at the box office. This project seeks to help Microsoft make informed decisions on what movies to create and provide insights into the movie market\n",
         "\n"
@@ -64,7 +64,7 @@
         "id": "A464s2hxvhLv"
       },
       "source": [
-        "**OBJECTIVES**\n",
+        "# **OBJECTIVES**\n",
         "\n",
         "\n",
         "*   To explore what type of films are currently doing the best\n",
@@ -2612,6 +2612,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "YlgIr_0DevqG"
+      },
+      "source": [
+        "# **DATA ANALYSIS**\n",
+        "\n",
+        "Here we are going to explore our data and use visualizations in plenty as we attempt to find answers to our Objectives"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "BRGDGjhn2L2o"
       },
       "source": [
@@ -3377,7 +3388,7 @@
         "id": "09q_QrXKaABJ"
       },
       "source": [
-        "**Dropping columns**\n",
+        "# **Dropping columns**\n",
         "\n",
         "The code below drops the column \"original_language\""
       ]
@@ -4690,17 +4701,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YlgIr_0DevqG"
-      },
-      "source": [
-        "# **DATA ANALYSIS**\n",
-        "\n",
-        "Here we are going to explore our data and use visualizations in plenty as we attempt to find answers to our Objectives"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 166,
       "metadata": {
@@ -4745,7 +4745,7 @@
         "id": "cL_TXhGehU9a"
       },
       "source": [
-        "**IDENTIFYING THE MOST POPULAR MOVIE GENRE IN THE DATA**"
+        "# Identifying the most popular movie genre in the data"
       ]
     },
     {
@@ -4793,7 +4793,7 @@
         "id": "0qMzaKBdrlLl"
       },
       "source": [
-        "**Visualizing the most popular movie genre**"
+        "# Visualizing the most popular movie genre"
       ]
     },
     {
@@ -4853,7 +4853,7 @@
         "id": "zWLhMf0Ny8nK"
       },
       "source": [
-        "**VISUALIZING THE VOTE_AVERAGE DISTRIBUTION**"
+        "# Visualizing the vote__avergae distribution"
       ]
     },
     {
@@ -5497,7 +5497,7 @@
         "id": "7yDmW--eKhge"
       },
       "source": [
-        " **GENRE WITH HIGHEST DOMESTIC GROSS**\n",
+        "# Genre with Highest domestic gross\n",
         "\n",
         "The code below is meant to show the genre with the highest domestic gross"
       ]
@@ -5595,7 +5595,7 @@
         "id": "YIrVAB1PVwzy"
       },
       "source": [
-        "**Visualize using Bar Graphs**"
+        "# Visualize using Bar Graphs"
       ]
     },
     {
@@ -5650,7 +5650,7 @@
         "id": "AQ3Mf80EeSZi"
       },
       "source": [
-        " **GENRE WITH THE HIGHEST FOREIGN GROSS**\n",
+        "# Genre with the Highest foreign gross\n",
         "\n",
         " The code below is meant to show the genre with the highest foreign gross"
       ]
@@ -5748,7 +5748,7 @@
         "id": "m7EdJ8SHsgm2"
       },
       "source": [
-        "**Visualize using Bar Graphs**"
+        "# Visualize using Bar Graphs"
       ]
     },
     {
